--- a/package.json
+++ b/package.json
@@ -34,7 +34,30 @@
     "webpack-dev-server": "^4.7.1"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "D": "^1.0.0",
+    "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "postcss-loader": "^6.2.1",
+    "precss": "^4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.4",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "sass-loader": "^12.4.0",
+    "url-loader": "^4.1.1"
   }
 }
