--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "regenerator-runtime": "^0.13.9",
     "url-loader": "^4.1.1"
   }
 }
