--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
